# outline-edit

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: PUBLISH.md
integrations/skills/outline-cli/: SKILL.md
integrations/skills/outline-edit/: SKILL.md
src/outline_cli/: cli.py  skill.md
src/outline_edit/: cli.py  skill.md
tests/: test_defaults_and_conflicts.py  test_smoke.py
